# rust_ast_gen

./: .gitattributes  Cargo.toml  README.md  build.rs  rust.ungram
.github/scripts/: verify-release-tag.sh
.github/workflows/: pr.yml  release.yml
scala_tests/: .gitignore  build.sbt
scala_tests/src/main/scala/io/joern/rust2cpg/parser/: RustNodeSyntax.scala
scala_tests/src/test/scala/io/joern/rust2cpg/parser/: RustAstGenPrettyPrintTests.scala  RustAstGenTestFixture.scala  RustAstGenTraversalTests.scala
src/: cargo.rs  config.rs  grammar.rs  json.rs  json_gen.rs  lib.rs  main.rs  scala_gen.rs
src/grammar/: model.rs  ungrammar.rs
src/scala_gen/: config.rs  emitter.rs
