[package]
name = "rust_ast_gen"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
ra_ap_hir = "0.0.328"
ra_ap_ide = "0.0.328"
ra_ap_load-cargo = "0.0.328"
ra_ap_project_model = "0.0.328"
ra_ap_vfs = "0.0.328"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
ra_ap_syntax = "0.0.328"
ungrammar = "1.16.1"
chrono = "0.4.44"
heck = "0.5.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
